--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-community/masked-view": "^0.1.10",
+    "@react-navigation/native": "^5.9.4",
+    "@react-navigation/stack": "^5.14.4",
     "expo": "~40.0.0",
     "expo-constants": "^9.3.5",
     "expo-image-picker": "~9.2.0",
@@ -19,6 +22,9 @@
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
     "react-native-gesture-handler": "~1.8.0",
+    "react-native-reanimated": "^2.1.0",
+    "react-native-safe-area-context": "^3.1.9",
+    "react-native-screens": "^3.1.0",
     "react-native-web": "~0.13.12",
     "yup": "^0.32.9"
   },
