--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "react-native-gesture-handler": "~1.8.0",
     "react-native-reanimated": "^2.1.0",
     "react-native-safe-area-context": "^3.1.9",
-    "react-native-screens": "^3.1.0",
+    "react-native-screens": "~2.15.2",
     "react-native-web": "~0.13.12",
     "yup": "^0.32.9"
   },
